--- a/styles/style.css
+++ b/styles/style.css
@@ -1,24 +1,3 @@
-/* общие */
-h1, h2, h3, h4, h5, h6, p {
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-.centered-block {
-  margin: auto;
-}
-
-.list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-/* поток */
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -54,6 +33,7 @@ a {
 .header__title {
   width: 730px;
   margin-left: 64px;
+  z-index: 3;
   font-size: 102px;
   font-weight: bold;
   line-height: 96px;
@@ -61,6 +41,8 @@ a {
 }
 
 .header__subtitle {
+  margin: 0;
+  padding: 0;
   width: 388px;
   position: absolute;
   bottom: 30px;
@@ -73,6 +55,11 @@ a {
 
 .header__link {
   color: #2f80ed;
+  text-decoration: none;
+}
+
+.header__link:hover {
+  text-decoration: underline;
 }
 
 .header__square-pic {
@@ -98,12 +85,15 @@ a {
 
 .two-columns {
   width: 80%;
+  margin: auto;
   display: flex;
   justify-content: space-between;
 }
 
 .two-columns__brief {
   width: 175px;
+  margin: 0;
+  padding: 0;
   color: #2f80ed;
   font-size: 18px;
   font-weight: normal;
@@ -116,6 +106,8 @@ a {
 }
 
 .two-columns__paragraph {
+  margin: 0;
+  padding: 0;
   margin-bottom: 30px;
   font-size: 24px;
   font-weight: normal;
@@ -137,6 +129,7 @@ a {
 
 .section-title {
   width: 60%;
+  margin: auto;
   text-align: center;
   font-size: 60px;
   font-weight: bold;
@@ -146,6 +139,7 @@ a {
 
 .section-subtitle {
   width: 60%;
+  margin: auto;
   text-align: center;
   font-size: 24px;
   font-weight: normal;
@@ -154,8 +148,8 @@ a {
 
 .table {
   width: 1100px;
+  margin: auto;
   display: flex;
-  position: relative;
   flex-wrap: wrap;
   justify-content: space-between;
 }
@@ -165,6 +159,8 @@ a {
   margin-top: 60px;
 }
 .table__heading {
+  margin: 0;
+  padding: 0;
   font-size: 24px;
   font-weight: bold;
   line-height: 1.15;
@@ -183,7 +179,9 @@ a {
 }
 
 .feynman {
-  height: 790px;
+  min-height: 790px;
+  margin: 0;
+  padding: 0;
   position: relative;
   padding-top: 100px;
   background-color: #f2f2f2;
@@ -195,6 +193,7 @@ a {
 
 .feynman__title {
   width: 648px;
+  margin: auto;
   text-align: center;
   font-size: 120px;
   font-weight: bold;
@@ -203,6 +202,7 @@ a {
 }
 
 .feynman__subtitle {
+  margin: auto;
   text-align: center;
   font-size: 36px;
   font-weight: normal;
@@ -214,16 +214,23 @@ a {
   top: 50%;
   right: 48px;
   color: #000;
+  text-decoration: none;
   font-size: 36px;
   font-weight: normal;
   line-height: 51px;
 }
 
+.feynman__link:hover {
+  text-decoration: underline;
+  color: #2f80ed;
+}
+
 .kaufman {
+  margin: 0;
+  padding: 0;
   position: relative;
   padding-top: 90px;
   padding-bottom: 90px;
-  color: white;
   background-color: #1f1f1f;
   overflow: hidden; 
 }
@@ -234,17 +241,37 @@ a {
   position: absolute;
   top: 0;
   right: -210px;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
-/* .section-title_theme_dark, .section-subtitle_theme_dark {
+.section-title_theme_dark {
+  position: relative;
+  z-index: 1;
   color: white;
-} */
+}
+
+.section-subtitle_theme_dark {
+  position: relative;
+  z-index: 2;
+  color: white;
+}
+
+.table_theme_dark {
+  position: relative;
+  z-index: 3;
+}
 
 .table__cell_theme_dark {
   width: 200px;
-  /* color: white; */
   margin-right: 0;
   margin-top: 80px;
+}
+
+.table__heading_theme_dark, .table__text_theme_dark {
+  color: white;
 }
 
 .footer {
@@ -252,22 +279,32 @@ a {
   padding-top: 60px;
   padding-bottom: 40px;
   box-sizing: border-box;
-  color: white;
   background-color: #1f1f1f;
 }
 
-.footer_columns {
+.footer__columns {
   width: 90%;
   min-height: 250px;
+  margin: auto;
   display: flex;
   justify-content: space-between;
 }
 
+.footer__column {
+  margin: 0;
+  padding: 0;
+}
+
 .footer__column_content_copyright {
+  color: white;
   flex-basis: 711px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.footer__column_content_info, .footer__column_content_social {
+  color: white;
 }
 
 .logo_place_footer {
@@ -283,6 +320,8 @@ a {
 }
 
 .footer__column-heading {
+  margin: 0;
+  padding: 0;
   margin-bottom: 20px;
   font-size: 18px;
   font-weight: bold;
@@ -290,10 +329,22 @@ a {
 }
 
 .footer__column-links {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer__column-link {
   color: white;
+  text-decoration: none;
   font-size: 18px;
   font-weight: normal;
   line-height: 30px;
+}
+
+.footer__column-link:hover {
+  text-decoration: underline;
+  color: #2f80ed;
 }
 
 .footer__social-icon {
