--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -11,7 +11,7 @@
 }
 
 .feynman__link:hover {
-  text-decoration: underline;
-  color: #2f80ed;
-  opacity: .6;
+  /* text-decoration: underline; */
+  /* color: #2f80ed; */
+  opacity: .5;
 }
