--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -8,7 +8,7 @@
 }
 
 .footer__column-link:hover {
-  text-decoration: underline;
-  color: #2f80ed;
-  opacity: .6;
+  /* text-decoration: underline; */
+  /* color: #2f80ed; */
+  opacity: .5;
 }
